ctxmap-tests/tests/compile_fail/unwind_view.stderr
error[E0277]: the type `&mut CtxMapView<'_, main::Schema>` may not be safely transferred across an unwind boundary
   --> tests/compile_fail/unwind_view.rs:9:26
    |
9   |       let _ = catch_unwind(|| {
    |               ------------ ^-
    |               |            |
    |  _____________|____________within this `[closure@$DIR/tests/compile_fail/unwind_view.rs:9:26: 9:28]`
    | |             |
    | |             required by a bound introduced by this call
10  | |         v.with(&KEY_A, &2, |v| {
11  | |             panic!("");
12  | |         });
13  | |     });
    | |_____^ `&mut CtxMapView<'_, main::Schema>` may not be safely transferred across an unwind boundary
    |
    = help: within `[closure@$DIR/tests/compile_fail/unwind_view.rs:9:26: 9:28]`, the trait `UnwindSafe` is not implemented for `&mut CtxMapView<'_, main::Schema>`
note: required because it's used within this closure
   --> tests/compile_fail/unwind_view.rs:9:26
    |
9   |     let _ = catch_unwind(|| {
    |                          ^^
note: required by a bound in `catch_unwind`
   --> $RUST/std/src/panic.rs
    |
    | pub fn catch_unwind<F: FnOnce() -> R + UnwindSafe, R>(f: F) -> Result<R> {
    |                                        ^^^^^^^^^^ required by this bound in `catch_unwind`
